fix: lotties and spacing

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ background: linear-gradient(124deg, rgba(17,17,17,1) 0%, rgba(27,28,29,0.7665660
   text-align: center;
   font-size: 20px;
 }
+.tabs-main{
+ margin-bottom: 10vh;
+ margin-top: 10vh;
+}
 
 @media (max-width: 768px){
 
